:bug: fix: touch on mobiles phones

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.notes {
+  position: relative;
+  z-index: 10;
+}
